# orama-challenge

./: .coveragerc  .gitignore  Dockerfile  README.md  config.py  config_local.py.template  orama-challenge.collection.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
app/: __init__.py
app/modules/: __init__.py
app/modules/freelancers/: __init__.py  schemas.py  views.py
app/utils/: computers.py
challenge/: README.md
tests/: conftest.py  test_app.py
tests/modules/freelancers/: conftest.py  test_views.py
tests/utils/: conftest.py  test_computers.py
